--- a/logstash/Dockerfile
+++ b/logstash/Dockerfile
@@ -1,5 +1,5 @@
 # https://github.com/elastic/logstash-docker
-FROM docker.elastic.co/logstash/logstash-oss:6.2.2
+FROM daocloud.io/hadwinzhy/logstash-docker
 
 # Add your logstash plugins setup here
 # Example: RUN logstash-plugin install logstash-filter-json
